-IonIcons added to bower -Implemented favorites system -Writing and Reading favorites list from disk

--- a/package.json
+++ b/package.json
@@ -63,6 +63,9 @@
     "org.apache.cordova.console",
     "org.apache.cordova.device",
     "org.apache.cordova.device",
-    "com.ionic.keyboard"
+    "com.ionic.keyboard",
+    "org.apache.cordova.file",
+    "org.apache.cordova.file",
+    "org.apache.cordova.file"
   ]
 }
